<resources>
    <string name="app_name">Just Weather</string>
    <string name="strings">Moscow</string>
    <string name="temp">10°C</string>
    <string name="textview">Sunny</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="heading">Settings</string>
    <string name="location">Location</string>
    <string name="wind_speed">"Show wind speed"</string>
    <string name="pressure">Show pressure</string>
    <string name="wind">3 mph</string>
    <string name="pressure_text">747 mm Hg</string>
    <string name="apply_text">Apply</string>
    <string name="day_2">July 2</string>
    <string name="temp_2">+11  °C</string>
    <string name="hint">Locatoin</string>
    <string name="setLocationButton">Set</string>
    <string name="feels_like">Feels like:</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Locations</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="communicate">Communicate</string>
    <string name="search_history">Search history</string>
    <string name="nav_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="locations_header">Locations</string>
    <string name="dialog_message">Change city?</string>
    <string name="ok">No</string>
    <string name="yes">Yes</string>
    <string name="history">Favorite</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="units_temp_kelvin">°K</string>
    <string name="units_temp_celsius">°C</string>
    <string name="units_temp_far">°F</string>
    <string name="units_pressure">hPa</string>
    <string name="units_wind_miles">m/h</string>
    <string name="units_wind_meter">m/s</string>

    <string name="units_standard">standard system</string>
    <string name="units_metric">metric system</string>
    <string name="units_imperial">imperial system</string>
    <string name="units_header">Unit systems</string>
    <string name="no_favorite">No favorite locations</string>
    <string name="search_hint">Location</string>
    <string name="auto_location">Auto location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_extra">(location)</string>
    <string name="no_locality">No locality here</string>
    <string name="find_on_map">Find on map</string>
    <string name="add_location">Add location</string>
    <string name="list_view">List view</string>

</resources>